# geos

./: CMakeLists.txt  GEOSConfig.cmake.in
capi/: CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt
tests/bigtest/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/xmltester/: CMakeLists.txt
